--- a/tigacrafting/templates/tigacrafting/coarse_filter.html
+++ b/tigacrafting/templates/tigacrafting/coarse_filter.html
@@ -1,4 +1,5 @@
 {% load staticfiles %}
+{% load leaflet_tags %}
 <!DOCTYPE html>
 <html lang="{% block language %}'en'{% endblock %}">
 <head>
@@ -15,6 +16,12 @@
         .minimap {
             height: 140px;
             width: 100%;
+            border: none;
+            color: gray;
+        }
+        .maps {
+            height: 140px;
+            width: 200px;
             border: none;
             color: gray;
         }
@@ -151,8 +158,11 @@
     <script src="{% static 'tigacrafting/ia_graph.js' %}"></script>
     <script src="{% static 'tigacrafting/javascript/hover-preview.min.js' %}"></script>
     <script src="{% static 'tigacrafting/toastr/toastr.min.js' %}"></script>
+    {% leaflet_js %}
+    {% leaflet_css %}
     <script>
-        var csrf_token = '{{ csrf_token }}';
+        const csrf_token = '{{ csrf_token }}';
+        const iconurl = '{% static "tigamap/yellow_icon.png" %}';
     </script>
 </head>
 <body>
