--- a/tigacrafting/templates/tigacrafting/user_outline.html
+++ b/tigacrafting/templates/tigacrafting/user_outline.html
@@ -39,11 +39,20 @@
 
         <!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
         <!--[if lt IE 9]>
-      <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
+    <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
     <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
     <![endif]-->
     {% endblock %}
+    <script>
+        const iconurl = '{% static "tigamap/blue_icon.png" %}';
+    </script>
+    {% leaflet_js %}
+    {% leaflet_css %}
     <style>
+        .maps {
+            width: 200px;
+            height: 200px;
+        }
         .report_wrapper {
             margin-bottom: 50px;
         }
@@ -52,6 +61,7 @@
         }
         .map_wrapper {
             margin: 5px;
+            height: 200px;
         }
         .filter_wrapper {
             padding: 20px;
@@ -171,8 +181,8 @@
             </h5>
         </div>
         <div class="map_wrapper">
-            <div class="map_{{ report.version_UUID }}">
-                <iframe loading="lazy" class="minimap" src="/single_simple/{{ report.version_UUID }}"></iframe>
+            <div id="map_{{ report.version_UUID }}" class="maps map_{{ report.version_UUID }}" data-lat="{{ report.lat }}" data-lon="{{ report.lon }}">
+                <!--<iframe loading="lazy" class="minimap" src="/single_simple/{{ report.version_UUID }}"></iframe>-->
             </div>
         </div>
         {% if report.type == 'adult' %}
