--- a/tigacrafting/templates/tigacrafting/coarse_filter.html
+++ b/tigacrafting/templates/tigacrafting/coarse_filter.html
@@ -46,7 +46,7 @@
             margin: 10px;
             margin-left: 30px;
             font-size: small;
-            color: white;
+            //color: white;
         }
         .pictures_internal_grid {
             display: flex;
@@ -108,7 +108,7 @@
         li.miniform > span > span { color: white; }
         .form-inline { display: inline; }
         #filter_status {
-            margin-top: 60px;
+            margin-top: 70px;
             margin-bottom: 10px;
             margin-left: 10px;
             margin-right: 10px;
@@ -122,7 +122,7 @@
             align-self: center;
         }
         .label_wrapper {
-            color: white;
+            //color: white;
         }
         .box {
           float: left;
@@ -199,6 +199,9 @@
                                     <span class="current">
                                         Page ?? of ??
                                     </span>
+                                    <span>(</span>
+                                    <span id="n_pagination_reports">??</span>
+                                    <span>reports)</span>
                                     <button id="next_page_button" class="btn btn-default btn-sm active" data-offset="" type="button">Next</button>
                                     <form role="form" class="form-inline">
                                         <div class="form-group">
