--- a/stats/templates/stats/global_assignments.html
+++ b/stats/templates/stats/global_assignments.html
@@ -93,6 +93,7 @@
         <div class="col-md-1">
             <p><h3>{{ d.ns_country_name }}</h3></p>
             <p>National supervisor - {{ d.ns_username }}</p>
+            <p>Data last update - {{ d.last_update }} (UTC)</p>
         </div>
         <div class="col-md-11">
             <div class="row">
