done, also solved #248 and #244

--- a/tigacrafting/templates/tigacrafting/coarse_filter.html
+++ b/tigacrafting/templates/tigacrafting/coarse_filter.html
@@ -20,7 +20,7 @@
             color: gray;
         }
         .maps {
-            height: 140px;
+            height: 120px;
             width: 200px;
             border: none;
             color: gray;
@@ -41,6 +41,8 @@
         }
         .header_country {
             margin: 10px;
+            margin-left: 25px;
+            font-size: 20px;
         }
         .header_ia {
             margin: 10px;
@@ -73,7 +75,7 @@
         }
         .photo {
             width: 450px;
-            height: 400px;
+            height: 460px;
             background-color: red;
             margin: 10px;
         }
@@ -146,6 +148,23 @@
 
         .other_palette {
           background-color: #a5b5b5;
+        }
+
+        .header_report_label {
+            font-size: 20px;
+        }
+
+        .header_report_label_wrapper {
+            margin-left: 25px;
+        }
+        .lat_lon_wrapper {
+            display: flex;
+            flex-direction: row;
+            justify-content: center;
+        }
+        .lookup_button_wrapper{
+            align-self: center;
+            margin: auto;
         }
     </style>
     <script src="{% static 'tigacrafting/jquery/1.11.1/jquery.min.js' %}"></script>
