done, added some tests and tweaked flip dialog

--- a/tigacrafting/templates/tigacrafting/coarse_filter.html
+++ b/tigacrafting/templates/tigacrafting/coarse_filter.html
@@ -280,7 +280,7 @@
                             <div class="row">
                                 <div class="col-md-6">
                                     <div class="radio">
-                                      <label>
+                                      <label style="font-size: 20px;margin-left: 20px;">
                                         <input type="radio" name="radio_report_type" id="type_adult" value="adult" checked>
                                         Adult
                                       </label>
@@ -288,7 +288,7 @@
                                 </div>
                                 <div class="col-md-6">
                                     <div class="radio">
-                                      <label>
+                                      <label style="font-size: 20px;">
                                         <input type="radio" name="radio_report_type" id="type_site" value="site">
                                         Site
                                       </label>
@@ -296,6 +296,7 @@
                                 </div>
                             </div>
                         </div>
+                        <hr>
                         <div class="form-group">
                             <div class="row">
                                 <div class="col-md-6">
