added v tag to javascript file to ensure correct deploy

--- a/tigacrafting/templates/tigacrafting/expert_report_annotation.html
+++ b/tigacrafting/templates/tigacrafting/expert_report_annotation.html
@@ -2536,7 +2536,7 @@
 
     </script>
 
-    <script src={% static "tigacrafting/categories_combo.js" %}></script>
+    <script src={% static "tigacrafting/categories_combo.js" %}?v=1></script>
     <script src={% static "tigacrafting/macro_messages.js" %}></script> 
     <script src={% static "tigacrafting/exec_val.js" %}></script>
     <script src={% static "tigacrafting/straight_emergency_grab.js" %}></script>
