wip, test w filters

--- a/tigacrafting/templates/tigacrafting/coarse_filter.html
+++ b/tigacrafting/templates/tigacrafting/coarse_filter.html
@@ -206,7 +206,7 @@
                         </button>
                         <div class="navbar-brand">
                             <span style="color:#ff9900; font-size: small">
-                                MosquitoAlert Picture Validation
+                                M.A. Picture Validation
                                 <i id="gear" class="fa fa-refresh fa-spin" style="display: none;"></i>
                             </span>
 
@@ -471,6 +471,8 @@
             Country - <span class="badge" id="country_filter">Any</span>,
             AI Threshold - <= <span class="badge" id="ia_filter">1.0</span>
             <br><strong>Reports Matching Current Filter/Search Criteria:</strong> <span class="badge" id="n_query_reports">??</span>
+        </div>
+        <div id="bookmark_drawer">
         </div>
     </div>
     <div class="photo_container">
