finish restoring filter to ui

--- a/tigacrafting/templates/tigacrafting/coarse_filter.html
+++ b/tigacrafting/templates/tigacrafting/coarse_filter.html
@@ -472,6 +472,7 @@
             AI Threshold - <= <span class="badge" id="ia_filter">1.0</span>
             <br><strong>Reports Matching Current Filter/Search Criteria:</strong> <span class="badge" id="n_query_reports">??</span>
         </div>
+        Click to go to bookmark:
         <div id="bookmark_drawer">
         </div>
     </div>
