disabled confirmation, encourage js file reload

--- a/tigacrafting/templates/tigacrafting/coarse_filter.html
+++ b/tigacrafting/templates/tigacrafting/coarse_filter.html
@@ -175,7 +175,7 @@
     <script src="{% static 'tigacrafting/jquery-ui/jquery-ui.min.js' %}"></script>
     <script src="{% static 'tigacrafting/jquery_blockUI/jquery.blockUI.js' %}"></script>
     <script src="{% static 'tigacrafting/bootstrap-3.2.0-dist/js/bootstrap.min.js' %}"></script>
-    <script src="{% static 'tigacrafting/javascript/coarse_filter.js' %}"></script>
+    <script src="{% static 'tigacrafting/javascript/coarse_filter.js' %}?v=1"></script>
     <script src="{% static 'tigacrafting/d3/d3.min.js' %}"></script>
     <script src="{% static 'tigacrafting/ia_graph.js' %}"></script>
     <script src="{% static 'tigacrafting/javascript/hover-preview.min.js' %}"></script>
