--- a/tigacrafting/templates/tigacrafting/photo_grid.html
+++ b/tigacrafting/templates/tigacrafting/photo_grid.html
@@ -260,9 +260,9 @@
                     </div>
                 {% endif %}
                 {% if photo.hide == False %}
-                    <div class="grid-item valid">
-                        <a class="preview" href="/media/{{ photo.photo }}" target="_blank">
-                            <img class="frame" src="{{ photo.get_small_url }}">
+                    <div class="grid-item valid" style="width: 190px; height: 190px; overflow: hidden;">
+                        <a class="preview" href="{{ photo.photo.url }}" target="_blank">
+                            <img class="frame" src="{{ photo.get_small_url }}" style="width: 100%; height: 100%; object-fit: cover;">
                         </a>
                     </div>
                 {% endif %}
