--- a/tigacrafting/templates/tigacrafting/superexpert_report_annotation.html
+++ b/tigacrafting/templates/tigacrafting/superexpert_report_annotation.html
@@ -135,7 +135,7 @@
                aria-expanded="false" aria-controls="current_status_collapse{{ form.instance.id }}"><i class="fa fa-plus-square-o"></i></a>
             {{ form.instance.report.get_final_expert_status_bootstrap | safe }}
             <!-- %EURO_SWITCH% -->
-            <strong>Current Identification:</strong> {% include "tigacrafting/score_label_euro.html" with text=form.instance.report.get_final_combined_expert_category_euro color=form.instance.report.get_html_color_for_label %}
+            <strong>Current Status:</strong> {% include "tigacrafting/score_label_euro.html" with text=form.instance.report.get_final_combined_expert_category_euro color=form.instance.report.get_html_color_for_label %}
 
             <div class="collapse" id="current_status_collapse{{ form.instance.id }}">
                 <div class="well">
